유저관련 기능 테스트 코드 리팩토링, 좋아요 기능 리팩토링완료